--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bad-quotes",
   "version": "1.0.0",
   "description": "Breaking Bad characters and their \"bad\" quotes",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,17 @@
   },
   "homepage": "https://github.com/semuel1/Bad-Quotes#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "rowdy-logger": "^1.0.2",
     "sequelize": "^6.5.0"
   }
 }
